src/styles/globals/navigation/_main-nav.css
.main-nav {
    --main-nav-position: fixed;
    --main-nav-top: var(--topbar-height);
    --main-nav-left: 0;
    --main-nav-width: 100%;
    --main-nav-height: calc(100dvh - var(--topbar-height));
    --main-nav-padding: var(--spacing-normal) var(--spacing-normal) calc(var(--service-nav-height) + var(--spacing-l)) var(--spacing-normal);
    --main-nav-display: block;
    --main-nav-transform: translateY(calc(-100% - var(--topbar-height)));
    --main-nav-opacity: 0;
    --main-nav-transition:
            transform var(--animation-duration-fast) var(--animation-easing-normal),
            opacity var(--animation-duration-fast) var(--animation-easing-normal);

    --main-nav-list-display: flex;
    --main-nav-list-flex-direction: column;
    --main-nav-list-align-items: flex-start;
    --main-nav-list-justify-content: center;
    --main-nav-list-gap: var(--spacing-l);
    --main-nav-list-list-style: none;
    --main-nav-list-margin: var(--spacing-normal) 0 0;
    --main-nav-list-padding: 0;
    --main-nav-overflow-y: auto;

    --main-nav-list-item-text-width: 100%;
    --main-nav-list-item-text-display: flex;
    --main-nav-list-item-text-align-items: center;
    --main-nav-list-item-text-justify-content: space-between;
    --main-nav-list-item-text-gap: var(--spacing-xs);

    --main-nav-link-text-decoration: none;
    --main-nav-link-font-family: var(--font-family-text);
    --main-nav-link-font-weight: var(--font-weight-text-bold);
    --main-nav-link-font-size: var(--font-size-l);
    --main-nav-link-line-height: var(--line-height-s);
    --main-nav-link-color: var(--color-bg);

    --main-nav-back-button-display: flex;
    --main-nav-back-button-padding: 0;
    --main-nav-back-button-margin: var(--spacing-normal) 0 32px;
    --main-nav-back-button-bg-color: transparent;
    --main-nav-back-button-border: none;

    --main-nav-chevron-color: var(--color-bg);
    --main-nav-chevron-icon-desktop-size: var(--font-size-ms);
    --main-nav-chevron-transition: rotate var(--animation-duration-fast) var(--animation-easing-normal);

    --focus-outline-color: var(--color-bg);

    display: var(--main-nav-display);
    position: var(--main-nav-position);
    top: var(--main-nav-top);
    left: var(--main-nav-left);
    width: var(--main-nav-width);
    height: var(--main-nav-height);
    background-color: var(--main-nav-bg-color);
    padding: var(--main-nav-padding);
    transform: var(--main-nav-transform);
    opacity: var(--main-nav-opacity);
    transition: var(--main-nav-transition);
    z-index: -1;
    overflow-y: var(--main-nav-overflow-y);
}

[navigation-color="default"] .main-nav {
    --main-nav-bg-color: var(--color-primary);
    --main-nav-link-color: var(--color-bg);
    --main-nav-link-color-hover: var(--main-nav-link-color);
    --main-nav-list-bg-color: var(--color-primary-dark);
}

[navigation-color="primary"] .main-nav {
    --main-nav-bg-color: var(--color-primary);
    --main-nav-link-color: var(--color-bg);
    --main-nav-link-color-hover: var(--main-nav-link-color);
    --main-nav-list-bg-color: var(--color-primary-dark);
}

[navigation-color="secondary"] .main-nav {
    --main-nav-bg-color: var(--color-secondary);
    --main-nav-link-color: var(--color-bg);
    --main-nav-link-color-hover: var(--main-nav-link-color);
    --main-nav-list-bg-color: var(--color-secondary-dark);
}

[navigation-color="font"] .main-nav {
    --main-nav-bg-color: var(--color-font);
    --main-nav-link-color: var(--color-bg);
    --main-nav-link-color-hover: var(--main-nav-link-color);
    --main-nav-list-bg-color: var(--color-font-dark);
}

.topbar[open-nav] .main-nav {
    --main-nav-transform: translateX(0);
    --main-nav-opacity: 1;
}

.topbar[no-transitions] .main-nav {
    --main-nav-transition: none !important;
    --main-nav-chevron-transition: none;
}

.button.main-nav__back-button {
    display: var(--main-nav-back-button-display);
    padding: var(--main-nav-back-button-padding);
    margin: var(--main-nav-back-button-margin);
    background-color: var(--main-nav-back-button-bg-color);
    border: var(--main-nav-back-button-border);
}

.main-nav__chevron {
    display: flex;
    background: none;
    border: none;
    padding: 0;
}

.main-nav__chevron:focus-visible {
    outline: var(--focus-outline-width) solid var(--focus-outline-color);
    outline-offset: var(--focus-outline-offset);
}

.main-nav__chevron .icon {
    --icon-color: var(--main-nav-chevron-color);

    transition: var(--main-nav-chevron-transition);
}

.main-nav__list-item[data-is-open] > .main-nav__chevron .icon {
    rotate: -180deg;
}

@media screen and (width < 1024px) {
    /* For accessibility we hide the content of the main-nav when not open */
    .topbar:not([open-nav]) .main-nav > * {
        display: none;
    }

    .topbar:has(.language-picker, .language-picker-dropdown) .main-nav {
        --main-nav-padding: var(--spacing-xxl) var(--spacing-normal) calc(var(--service-nav-height) + var(--spacing-l)) var(--spacing-normal)
    }

    .main-nav__chevron:focus-visible .icon {
        background-color: var(--color-bg);
    }
}

@media (hover: hover) {
    .main-nav__chevron:hover {
        cursor: pointer;
    }

    .main-nav__link:hover {
        --main-nav-link-text-decoration: underline;
    }
}

@media screen and (width >= 1024px) {
    .main-nav {
        --main-nav-position: absolute;
        --main-nav-top: unset;
        --main-nav-bottom: 0;
        --main-nav-left: unset;
        --main-nav-right: max(var(--spacing-normal), calc(calc(100% - var(--content-wide-max-width)) / 2));
        --main-nav-width: auto;
        --main-nav-height: auto;
        --main-nav-padding: 0;
        --main-nav-display: flex;
        --main-nav-transform: none;
        --main-nav-opacity: 1;
        --main-nav-transition: none;
        --main-nav-bg-color: transparent;
        --main-nav-z-index: 1;
        --main-nav-overflow-y: visible;

        --main-nav-list-flex-direction: row;
        --main-nav-list-padding: 0;
        --main-nav-list-position: absolute;
        --main-nav-list-bottom: 0;
        --main-nav-list-width: 100%;
        --main-nav-list-border-top: 4px solid var(--main-nav-list-bg-color);
        --main-nav-list-box-shadow: var(--shadow-normal);

        --main-nav-list-item-height: 100%;
        --main-nav-list-item-position: relative;
        --main-nav-list-item-text-gap: var(--spacing-xs);

        --main-nav-link-font-size: var(--font-size-normal);
        --main-nav-link-font-weight: var(--font-weight-text-normal);
        --main-nav-link-color: var(--color-primary);
        --main-nav-link-white-space: nowrap;
        --main-nav-link-height: 100%;
        --main-nav-link-display: flex;
        --main-nav-align-items: center;

        --main-nav-chevron-color: var(--color-primary);

        --main-nav-back-button-display: none;

        z-index: var(--main-nav-z-index);
        right: var(--main-nav-right);
        bottom: var(--main-nav-bottom);
    }

    [navigation-color="default"] .main-nav {
        --main-nav-bg-color: var(--color-bg);
        --main-nav-link-color: var(--color-primary);
        --main-nav-link-color-hover: var(--color-primary-dark);
        --main-nav-list-bg-color: var(--color-bg);
        --main-nav-chevron-color: var(--color-primary);
        --main-nav-chevron-color-hover: var(--main-nav-link-color-hover);
        --focus-outline-color: var(--color-primary);
    }

    [navigation-color="primary"] .main-nav {
        --main-nav-bg-color: var(--color-primary);
        --main-nav-link-color: var(--color-bg);
        --main-nav-link-color-hover: var(--color-bg);
        --main-nav-list-bg-color: var(--color-primary);
        --main-nav-chevron-color: var(--color-bg);
        --main-nav-chevron-color-hover: var(--main-nav-link-color-hover);
    }

    [navigation-color="secondary"] .main-nav {
        --main-nav-bg-color: var(--color-secondary);
        --main-nav-link-color: var(--color-bg);
        --main-nav-link-color-hover: var(--color-bg);
        --main-nav-list-bg-color: var(--color-secondary);
        --main-nav-chevron-color: var(--color-bg);
        --main-nav-chevron-color-hover: var(--main-nav-link-color-hover);
    }

    [navigation-color="font"] .main-nav {
        --main-nav-bg-color: var(--color-font);
        --main-nav-link-color: var(--color-bg);
        --main-nav-link-color-hover: var(--color-bg);
        --main-nav-list-bg-color: var(--color-font);
        --main-nav-chevron-color: var(--color-bg);
        --main-nav-chevron-color-hover: var(--main-nav-link-color-hover);
    }

    .main-nav__link {
        white-space: var(--main-nav-link-white-space);
        height: var(--main-nav-link-height);
        display: var(--main-nav-link-display);
        align-items: var(--main-nav-align-items);
    }

    .main-nav__chevron .icon {
        background-color: var(--main-nav-chevron-color);
        height: var(--main-nav-chevron-icon-desktop-size);
        width: var(--main-nav-chevron-icon-desktop-size);
    }

    .main-nav__chevron:is(:hover, :focus-visible) .icon {
        --main-nav-chevron-color: var(--main-nav-chevron-color-hover);
    }

    .main-nav__list[data-nav-list-level="1"] {
        --main-nav-list-margin: 0;
        --main-nav-list-gap: var(--spacing-l);
        --main-nav-list-height: calc(var(--spacing-l) + var(--spacing-normal));

        height: var(--main-nav-list-height);
    }

    .topbar[logo-size="small"] .main-nav__list[data-nav-list-level="1"] {
        --main-nav-list-height: var(--spacing-l);

        height: var(--main-nav-list-height);
    }

    .main-nav__list-item {
        position: var(--main-nav-list-item-position);
        height: var(--main-nav-list-item-height);
    }

    .main-nav__list[data-nav-list-level="2"] .main-nav__text {
        --main-nav-level-2-list-item-font-size: var(--font-size-s);

        display: var(--main-nav-text-display);
        align-items: var(--main-nav-text-align-items);
        gap: var(--main-nav-text-gap);
        padding: var(--main-nav-text-padding);
        white-space: wrap;
        line-height: var(--line-height-s);
    }

    a:not(.button).main-nav__link:is(:hover, :focus-visible) {
        color: var(--main-nav-link-color-hover);
    }
}

